2006-08-21 Laurent Laville <pear@laurent-laville.org>

    * preparePackageFile() function allow now to :
    - add support for tasks file : convert line endings (windows and unix)
    - add support for install as name condition

2006-08-19 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 0.7.0 released.

    - fixed warning errors when use frontend from scratch
    - setFileList() method $plugin parameter is no more optional.
    - upgraded dependencies to PEAR_PackageFileManager 1.6.0b3 and Config 1.10.7

2006-07-24 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 0.6.0 released.

    - fixes package generation for group dependencies (package, supackage, extension)
    - implements 'replace' filter on Filter Decorator

2006-07-21 Laurent Laville <pear@laurent-laville.org>

    - Be sure to have a default files list in session
    - clean-up code
    - implements 'extension' and 'role' filters on new Filter Decorator

2006-07-19 Laurent Laville <pear@laurent-laville.org>

    - removed page 6 (roles)  management
    - global var '_PEAR_PACKAGEFILEMANAGER_FRONTEND_SINGLETON' was removed
      to avoid to pollute the global namespace.
      Singleton pattern used a static variable (as it should be since beginning).
    - fixed some phpdoc tags
    - better support of package xml <group> tag especially with package, subpackage, and extension

2006-05-29 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 0.5.0 released.

    - upgrades dependency to PEAR_PackageFileManager 1.6.0b1
    - introduces ChangeLog and NEWS files for history and quality assurance

2006-05-25 Laurent Laville <pear@laurent-laville.org>

    * bug fixes:
    - be sure to returns good data when getDefaults('dependencies') is called.
    - keep good version of pear installer when import a package 2.0
    - just for a new package from scratch pear installer is set to 1.4.3 minimum